@@ -49,6 +49,8 @@ public class ExecReducer extends MapReduceBase implements Reducer {
   private Reporter rp;
   private boolean abort = false;
   private boolean isTagged = false;
+  private long cntr = 0;
+  private long nextCntr = 1;
 
   private static String [] fieldNames;
   public static final Log l4j = LogFactory.getLog("ExecReducer");
@@ -164,6 +166,11 @@ public class ExecReducer extends MapReduceBase implements Reducer {
         row.add(keyObject);
         row.add(valueObject[tag.get()]);
         row.add(tag);
+        cntr++;
+        if (cntr == nextCntr) {
+          l4j.info("ExecReducer: processing " + cntr + " rows");
+          nextCntr = getNextCntr(cntr);
+        }
         reducer.process(row, rowObjectInspector[tag.get()]);
       }
 
@@ -171,6 +178,15 @@ public class ExecReducer extends MapReduceBase implements Reducer {
       abort = true;
       throw new IOException (e);
     }
+  }
+
+  private long getNextCntr(long cntr) {
+    // A very simple counter to keep track of number of rows processed by the reducer. It dumps
+    // every 1 million times, and quickly before that
+    if (cntr >= 1000000)
+      return cntr + 1000000;
+    
+    return 10 * cntr;
   }
 
   public void close() {
@@ -194,6 +210,7 @@ public class ExecReducer extends MapReduceBase implements Reducer {
         l4j.trace("End Group");
         reducer.endGroup();
       }
+      l4j.info("ExecReducer: processed " + cntr + " rows");
       reducer.close(abort);
       reportStats rps = new reportStats (rp);
       reducer.preorderMap(rps);
